@@ -1,5 +1,15 @@
 2008-10-04  kitone  <kitone@gna.org>
 
+	* src/FileReader.cc:
+	* src/FileReader.h:
+	* src/FileWriter.cc:
+	* src/FileWriter.h:
+	* src/Makefile.am:
+	Help to Read or write file.
+	New files. 
+
+2008-10-04  kitone  <kitone@gna.org>
+
 	* src/Document.cc:
 	* src/actions/Transcript.cc:
 	* src/gui/ComboBoxSubtitleFormat.cc:
